Adds new homepage in package.json for redux version

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "friends-rolodex",
-  "homepage": "https://jameswhitney.github.io/friends-rolodex",
+  "homepage": "https://jameswhitney.github.io/friends-rolodex-redux",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
